fix overflow mozilla

--- a/src/app/content/pages/content-detail/content-detail.component.scss
+++ b/src/app/content/pages/content-detail/content-detail.component.scss
@@ -16,6 +16,7 @@
   position: relative;
   display: flex;
   align-items: center;
+  overflow: hidden;
 
   &__container {
     display: grid;
